--- a/tema.css
+++ b/tema.css
@@ -251,6 +251,29 @@ h2 {
   border-bottom-color: var(--gold-metallic);
   border-right-color: var(--gold-metallic);
 }
+#mobile_galleri5 {
+  height: fit-content;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  justify-content: space-around;
+}
+
+#mobile_galleri5 figure {
+  width: 90%;
+  padding-left: 1rem;
+}
+
+#mobile_galleri5 img {
+  border-style: ridge;
+  border-width: 2px;
+  border-top-color: var(--satin-sheen-gold);
+  border-left-color: var(--satin-sheen-gold);
+  border-bottom-color: var(--gold-metallic);
+  border-right-color: var(--gold-metallic);
+}
 
 #img_galleri1 {
   display: none;
@@ -582,6 +605,7 @@ h2 {
   #mobile_galleri2,
   #mobile_galleri3,
   #mobile_galleri4,
+  #mobile_galleri5,
   #galleri_link {
     display: none;
   }
