--- a/style.css
+++ b/style.css
@@ -89,7 +89,6 @@ h3 {
 .even {
   font-family: abel;
   font-size: 20pt;
-  margin-bottom: 0.5em;
   max-width: 100ch;
   color: var(--cadet-blue);
   padding-right: 1rem;
@@ -104,7 +103,6 @@ h3 {
 .odd {
   font-family: abel;
   font-size: 20pt;
-  margin-bottom: 0.5em;
   max-width: 100ch;
   color: var(--minion-yellow);
   padding-left: 1rem;
@@ -196,7 +194,7 @@ hr {
   position: relative;
   clip-path: polygon(0 0, 100% 0%, 100% 0%, 50% 100%, 0% 0%);
   height: 300px;
-  z-index: -1;
+  z-index: 0;
   /* to make responsive change padding top and bottom for different media sizes */
   /* padding-top: 10%;
   padding-bottom: 40%; */
@@ -249,6 +247,10 @@ img {
 .about {
   top: -38%;
   left: -10%;
+}
+
+#about {
+  padding-top: 70px;
 }
 
 /* index */
